# ghostdock

./: .gitignore  Cargo.toml  Cargo.toml.perf  Dockerfile  Dockerfile.production  FEATURES.md  Makefile  PRODUCTION_READY.md  README.md  docker-compose.production.yml  docker-compose.yml
assets/: dashboard.html  enhanced_dashboard.html  enhanced_index.html
config/: config.toml  dev.toml
docs/: api.md  configuration.md  installation.md  web-ui.md
examples/: config.dev.toml  config.production.toml  docker-compose.production.yml  python_client.py  test_registry.sh
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: ghostdock.service  install.sh
src/: cli.rs  config.rs  enhanced_error.rs  error.rs  lib.rs  main.rs  models.rs  performance.rs  server.rs  stack_management.rs  types.rs  utils.rs  web.rs  web_enhanced.rs  websocket.rs
src/api/: mod.rs  v2.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/database/: migrations.rs  mod.rs  queries.rs
src/handlers/: auth.rs  compose.rs  health.rs  manifest.rs  mod.rs  registry.rs  web.rs
static/: index.html
